before interact websocket